@@ -68,6 +68,7 @@ following names for their contribution to the product.
 * Ahmad Sherif
 * Antonio Ospite
 * Azliq7
+* Bawolff
 * Borislav Manolov
 * Brad Jorsch
 * Brent G
